crates/math-core/tests/snapshots/error_test__math_variant_switch_in_subscript.snap
---
source: crates/math-core/tests/error_test.rs
expression: "{x_\\bf x}"
---
Error: Switch-like commands cannot be used as arguments.
   ╭─[ <input>:1:4 ]
   │
 1 │ {x_\bf x}
   │    ─┬─  
   │     ╰─── used as argument
───╯
